--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,8 @@ langsmith==0.4.28
 llama-index
 llama-index-vector-stores-postgres
 llama-index-llms-groq
+llama-index-embeddings-openai
+llama-index-embeddings-huggingface
 psycopg2-binary
 pypdf
 python-multipart
